--- a/style/styles.css
+++ b/style/styles.css
@@ -3,10 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: #000000;
-    color: #ffffff;
-}
 .arvo-bold{
     font-family: "Arvo", serif;
     font-weight: 700;
@@ -18,23 +14,51 @@ body{
     font-weight: 400;
     font-style: normal;
 }
+body{
+    background-color: #000000;
+    color: #ffffff;
+    display:grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "header header"
+    "aside main"
+    "footer footer";
+}
+
+header{
+    grid-area: header;
+}
 
 img{
-    width: 100vw;
+    width: 100%;
+    height: 60vh;
 }
 
 main{
+    grid-area: main;
     background-image: url('../img/FondoImagenParrafo.jpg');
-    width: 100vw;
-    height: 70vw;
+    background-size: cover;
+    height: 70vh;
+    padding:2rem;
+    display:grid;
+    place-content: center;
+    text-align: center;
 }
-
+aside{
+    grid-area: aside;
+    padding: 2rem;
+    display:grid;
+    place-content: center;
+    text-align: center;
+}
 footer{
+    grid-area: footer;
     background-image: url('../img/FondoFooter.png');
-    width: 100vw;
-    height: 20vw;
+    background-size: cover;
+    /*width: 100%;*/
 }
 
 .pFooter{
-    padding: 10vw 10vw;
+    padding: 20vh 35vw;
 }
