--- a/style/styles.css
+++ b/style/styles.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -22,32 +22,47 @@ body{
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
     "header header"
-    "aside main"
+    "main main"
     "footer footer";
 }
 
 header{
     grid-area: header;
+    padding: 0;
 }
-
-img{
-    width: 100%;
-    height: 60vh;
-}
-
-main{
-    grid-area: main;
-    background-image: url('../img/FondoImagenParrafo.jpg');
-    background-size: cover;
-    height: 70vh;
-    padding:2rem;
+h1{
     display:grid;
     place-content: center;
     text-align: center;
 }
+h2{
+    display:grid;
+    place-content: center;
+    text-align: center;
+}
+img{
+    width: 100%;
+}
+
+main{
+    padding: 0px 190px;
+    grid-area: main;
+    background-image: url('../img/FondoImagenParrafo.jpg');
+    background-size: cover;
+    display:grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "section section"
+    "section2 section2"
+    "section3 section3"
+    "section4 section4"
+    "sectionOrquesta sectionOrquesta"
+    "sectionVideojuego sectionVideojuego";
+}
 aside{
+    padding: 0px 0px 0px 190px;
     grid-area: aside;
-    padding: 2rem;
     display:grid;
     place-content: center;
     text-align: center;
@@ -61,4 +76,63 @@ footer{
 
 .pFooter{
     padding: 20vh 35vw;
+}
+.sectionCanciones1{
+    grid-area: section;
+}
+.sectionCanciones2{
+    grid-area: section2;
+}
+.sectionCanciones3{
+    grid-area: section3;
+}
+.sectionCanciones4{
+    grid-area: section4;
+}
+.sectionInterno{
+    display:grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "div p";
+    padding:20px 0px
+}
+.divCancion{
+    display:grid;
+    place-content: center;
+    text-align: center;
+}
+
+.pCancion{
+    display:grid;
+    place-content: center;
+    text-align: center;
+}
+.sectionOrquesta{
+    grid-area: sectionOrquesta;
+}
+.sectionVideojuego{
+    grid-area: sectionVideojuego;
+}
+
+.divFotos{
+    display:grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "figure1 figure2"
+    "figure3 figure4";
+}
+
+.figure1{
+    grid-area:figure1;
+}
+.figure1{
+    grid-area:figure2;
+}
+.figure1{
+    grid-area:figure3;
+}
+.figure1{
+    grid-area:figure4;
 }
