--- a/style/styles.css
+++ b/style/styles.css
@@ -36,11 +36,11 @@ header{
     padding: 0;
 }
 h1{
-    padding:0 190px;
+    padding:15px 190px;
     font-size: 40px;
 }
 h2{
-    padding:0 190px;
+    padding:15px 190px;
     font-size: 28px;
 }
 h3{
@@ -78,6 +78,14 @@ footer{
     background-image: url('../img/FondoFooter.png');
     background-size: cover;
     /*width: 100%;*/
+}
+nav{
+    background-color: #cb0612;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    width: 100%;
+    padding: 0 190px;
 }
 
 .pFooter{
@@ -155,4 +163,24 @@ footer{
 
 .justificar{
     text-align: justify;
+}
+
+.imgDiv{
+    grid-column: 2;
+    justify-self: center;
+    width: 150px;
+}
+
+.botonMenu{
+    grid-column: 3;
+    justify-self: end;
+    background: transparent;
+    border:none;
+    cursor: pointer;
+}
+
+.imgButton{
+    width: 30px;
+    height: auto;
+    display: block;
 }
