--- a/style/styles.css
+++ b/style/styles.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+.arvo-regular {
+  font-family: "Arvo", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .arvo-bold{
     font-family: "Arvo", serif;
     font-weight: 700;
@@ -69,8 +74,8 @@ main{
     "section2 section2"
     "section3 section3"
     "section4 section4"
-    "sectionOrquesta sectionOrquesta"
-    "sectionVideojuego sectionVideojuego";
+    "sectionVideojuego sectionVideojuego"
+    "sectionOrquesta sectionOrquesta";
     background-image: url('../img/FondoImagen.jpg');
     background-size: cover;
 }
@@ -78,6 +83,8 @@ footer{
     grid-area: footer;
     background-image: url('../img/FondoFooter.png');
     background-size: cover;
+    width: 100%;
+    height: 200px;
     /*width: 100%;*/
 }
 nav{
@@ -89,8 +96,15 @@ nav{
     padding: 0 190px;
 }
 
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+}
 .pFooter{
-    padding: 20vh 35vw;
+    /*padding: 20vh 35vw;*/     
 }
 .sectionCanciones1{
     grid-area: section;
@@ -112,10 +126,6 @@ nav{
     "div p";
     padding:20px 0px
 }
-.divCancion{
-    
-}
-
 
 .sectionOrquesta{
     grid-area: sectionOrquesta;
@@ -172,13 +182,13 @@ nav{
     width: 150px;
 }
 
-.botonMenu{
+/*.botonMenu{
     grid-column: 3;
     justify-self: end;
     background: transparent;
     border:none;
     cursor: pointer;
-}
+}*/
 
 .imgButton{
     width: 30px;
@@ -198,3 +208,41 @@ nav{
     grid-area: h3Canciones;
     padding: 15px 0px;
 }
+
+#lista{
+    position:relative;
+    justify-self: end;
+}
+#absoluta{
+    position:absolute;
+    padding-left: 0px;
+    display: none;
+    top:32px;
+    left:0px;
+}
+#absoluta li{
+    position:relative;
+    background:#cb0612;
+}
+
+#absoluta li a{
+    color:white;
+}
+ul #lista:hover #absoluta{
+    display:block;
+}
+
+.botonMenu{
+    background: transparent;
+    border:none;
+    cursor: pointer;
+}
+
+#escenas{
+    padding: 10px 0;
+}
+
+#h3Main{
+    padding: 10px 0;
+}
+
